--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 	<!--<link rel="stylesheet" href="./style/style.css">-->
 	<script src="./js/LexAn.js"></script>
 	<script src="./js/SynAn.js"></script>
+	<script src="./js/Eval.js"></script>
 </head>
 <body>
 	<script>
-		let expression = '1';
+		let expression = '1.99*3.2+(12-60)';
 		let lexan = new LexAn(expression);
+		let ast;
+		let evaluator;
 		
 		/*let token = {}; //lexan.tokenizeInput();
 		
@@ -22,11 +25,15 @@
 		let synan = new SynAn(lexan);
 
 		try {
-			console.log(synan.parse());
+			ast = synan.parse();
 			console.log('Expression is valid.');
 		} catch (e) {
 			alert('Invalid expression! ' + e);
 		}
+		
+		console.log(ast);
+		evaluator = new Evaluator();
+		console.log(evaluator.evaluate(ast));
 		
 		//console.log(eval('1.1.1'));
 		//console.log(exampleAST());
